fixed alignment menu with social icon

--- a/themes/custom/cpv3/css/style.css
+++ b/themes/custom/cpv3/css/style.css
@@ -38,6 +38,7 @@ q:before, q:after { content: ''; content: none; }
 .white{color:#fff;}
 .padding-top5{padding-top: 5px;}
 .paddingtop10{padding-top: 10px;}
+.paddingtop13{padding-top: 13px !important;}
 .paddingtop15{padding-top: 15px;}
 .paddingtop25{padding-top: 25px;}
 .padding-top40{padding-top: 40px;}
@@ -111,7 +112,7 @@ q:before, q:after { content: ''; content: none; }
 .mega-dropdown-menu > li ul > li > a:hover,
 .mega-dropdown-menu > li ul > li > a:focus {text-decoration: underline;}
 .mega-dropdown-menu .dropdown-header {font-size: 18px !important; color: #333333; padding: 5px 60px 5px 15px; line-height: 30px;}
-.top-social-icons{padding-top:0px !important;margin-right: 0px;margin-bottom: 0px;margin-top: 0px;margin-left: 0px;}
+.top-social-icons{padding-top:2px !important; margin-right: 0px; margin-bottom: 0px; margin-top: 0px; margin-left: 0px;}
 .top-social-icons .s-icons{ padding-left: 0; padding-right: 15;}
 .top-social-icons .fa-2x{font-size:1.8em;}
 /** End Menu **/
